--- a/src/styles/Layout.module.css
+++ b/src/styles/Layout.module.css
@@ -19,11 +19,6 @@ body{
   justify-content: center;
   align-items: center;
 }
-.logoIcon svg{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
 @keyframes fade-in {
   from { opacity: 0; }
